--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ a{
 }
 
 body{
-    background-color: rgb(34, 34, 34);
+    background-color: rgb(211, 29, 29);
+    color: aqua;
     display: grid;
 }
 .nab{
